@@ -1,12 +1,14 @@
 package com.example.hostelmanagement.controller;
-import com.example.hostelmanagement.entity.Principal;
 
+import com.example.hostelmanagement.entity.Principal;
+import com.example.hostelmanagement.entity.Student;
+import com.example.hostelmanagement.repository.PrincipalRepository;
 import com.example.hostelmanagement.entity.Admin;
 import com.example.hostelmanagement.service.AdminService;
 import com.example.hostelmanagement.service.PrincipalService;
+import com.example.hostelmanagement.service.StudentService;
 
 import jakarta.servlet.http.HttpServletRequest;
-
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.*;
@@ -18,6 +20,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/admins")
@@ -26,33 +29,53 @@ public class AdminController {
     @Autowired
     private AdminService adminService;
 
-
     @Autowired
     private PrincipalService principalService;
+
+    @Autowired
+    private StudentService studentService;
 
     @PostMapping("/login")
     public ResponseEntity<?> login(@RequestBody Map<String, String> credentials, HttpServletRequest request) {
         String email = credentials.get("email");
         String password = credentials.get("password");
 
-        // First try Admin
+        // for ADMIN part
         Admin existingAdmin = adminService.getByEmail(email);
         if (existingAdmin != null && existingAdmin.getPassword().equals(password)) {
-            authenticateUser(email, request);
+            authenticateUser(email, existingAdmin.getPermission(), request);
 
             return ResponseEntity.ok(Map.of(
                     "message", "Admin login successful",
-                    "permission", existingAdmin.getPermission()));
+                    "permission", existingAdmin.getPermission(),
+                    "user", existingAdmin // 🔥 Send the full principal object
+
+            ));
+
         }
 
         // Then try Principal
         Principal principal = principalService.getByEmail(email);
         if (principal != null && principal.getPassword().equals(password)) {
-            authenticateUser(email, request);
+            authenticateUser(email, principal.getPermission(), request);
 
             return ResponseEntity.ok(Map.of(
                     "message", "Principal login successful",
-                    "permission", principal.getPermission()));
+                    "permission", principal.getPermission(),
+                    "user", principal // 🔥 Send the full principal object
+            ));
+        }
+
+        // Then try Student
+
+        Student student = studentService.getByEmail(email);
+        if (student != null && student.getPassword().equals(password)) {
+            authenticateUser(email, "STUDENT", request); // Explicitly set permission to "STUDENT"
+
+            return ResponseEntity.ok(Map.of(
+                    "message", "Student login successful",
+                    "permission", "STUDENT",
+                    "user", student));
         }
 
         // If neither found
@@ -61,9 +84,9 @@ public class AdminController {
     }
 
     // ✅ Reusable auth logic
-    private void authenticateUser(String email, HttpServletRequest request) {
+    private void authenticateUser(String email, String permission, HttpServletRequest request) {
         UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                email, null, Collections.emptyList());
+                email, null, List.of(() -> permission));
         SecurityContext context = SecurityContextHolder.createEmptyContext();
         context.setAuthentication(authToken);
         request.getSession(true).setAttribute("SPRING_SECURITY_CONTEXT", context);
